--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,8 @@
   <title>FYB</title>
   
   <link rel="icon" href="img/ionic.png">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBStEJdHAiAZAOeZB8sG2cx5MdKqm284t8"
+ type="text/javascript"></script>
 </head>
 
 <body>
@@ -23,7 +25,6 @@
           .catch(err => console.log('Error', err));
       }
     </script>-->
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- <link href="lib/ionic/css/ionicnightly.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
@@ -67,7 +68,7 @@
     <link rel="stylesheet" href="css/ng-animation.css">
     <script type="text/javascript" src="lib/other/d3/d3.min.js"></script>
     <!-- <script type="text/javascript" src="lib/other/googlemap.js"></script> -->
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAtn58xfBoEEIHWH8_Zm7EPRo_KnI-cF3s"></script>
+    
   </head>
   <body ng-app="besties">
       <ion-nav-view></ion-nav-view>
