--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
   <title>FYB</title>
   
   <link rel="icon" href="img/ionic.png">
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBStEJdHAiAZAOeZB8sG2cx5MdKqm284t8"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBStEJdHAiAZAOeZB8sG2cx5MdKqm284t8&callback=initMap"
  type="text/javascript"></script>
 </head>
 
