--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,7 @@
   <body ng-app="besties">
       <ion-nav-view></ion-nav-view>
       
-      <script id="dsq-count-scr" src="//jpbesties.disqus.com/count.js" async></script>
+      <script id="dsq-count-scr" src="http://jpbesties.disqus.com/count.js" async></script>
       <script type="text/javascript">
 
 
