--- a/www/login.html
+++ b/www/login.html
@@ -33,7 +33,7 @@
     <script src="js/routes.js"></script>
 
     <!-- your controller's js -->
-    <script src="js/loginController.js"></script>
+    <script src="js/controller/loginController.js"></script>
 
     <!-- your services's js -->
   </head>
