--- a/www/login.html
+++ b/www/login.html
@@ -42,6 +42,7 @@
         
           <h1 class="title">Find Your Besties</h1>
           <button class="button button-positive" ng-click="home()">Home</button>
+          <a class="button button-assertive"  href="#/app/home">HomeLink</a>
       
     </ion-content>
     <!-- <h1 class="title">Find Your Besties</h1> -->
