--- a/www/login.html
+++ b/www/login.html
@@ -34,6 +34,7 @@
 
     <!-- your controller's js -->
     <script src="js/controller/loginController.js"></script>
+    <script src="js/controller/homeController.js"></script>
 
     <!-- your services's js -->
   </head>
@@ -42,7 +43,7 @@
         
           <h1 class="title">Find Your Besties</h1>
           <button class="button button-positive" ng-click="home()">Home</button>
-          <a class="button button-assertive"  href="#/app/home">HomeLink</a>
+          <a class="button button-assertive"  href="/#/app/home">HomeLink</a>
       
     </ion-content>
     <!-- <h1 class="title">Find Your Besties</h1> -->
