--- a/www/login.html
+++ b/www/login.html
@@ -44,7 +44,8 @@
           <h1 class="title">Find Your Besties</h1>
           <button class="button button-positive" ng-click="home()">Home</button>
           <a class="button button-assertive"  href="/#/app/home">HomeLink</a>
-      
+          <button class="button button-positive" ng-click="staydelay()">staydelay</button>
+          <button class="button button-positive" ng-click="staydelay2()">staydelay2</button>
     </ion-content>
     <!-- <h1 class="title">Find Your Besties</h1> -->
         <!-- <div class="badge" ng-controller="scan">
