--- a/www/login.html
+++ b/www/login.html
@@ -34,11 +34,12 @@
 
     <!-- your controller's js -->
     <script src="js/controller/loginController.js"></script>
+    <script type="text/javascript" src="js/controller/menuController.js"></script>
     <script src="js/controller/homeController.js"></script>
 
     <!-- your services's js -->
   </head>
-  <body ng-app="besties">
+  <body ng-app="besties" ng-controller="loginController">
     <ion-content>
         
           <h1 class="title">Find Your Besties</h1>
