--- a/www/login.html
+++ b/www/login.html
@@ -17,7 +17,7 @@
     </script>-->
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -40,7 +40,7 @@
     <!-- your services's js -->
   </head>
   <body ng-app="besties" ng-controller="loginController">
-    <ion-content>
+    <ion-content id="loginpane">
         
       <h1 class="title">Find Your Besties</h1>
       <button class="button button-positive" ng-click="home()">Home</button>
