--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" href="img/ionic.png">
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBStEJdHAiAZAOeZB8sG2cx5MdKqm284t8&callback=initMap"
  type="text/javascript"></script>
+    <!-- <link href="css/animate.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -28,7 +30,6 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- <link href="lib/ionic/css/ionicnightly.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
-
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -75,10 +76,6 @@
       <ion-nav-view></ion-nav-view>
       
       <script id="dsq-count-scr" src="http://jpbesties.disqus.com/count.js" async></script>
-      <script type="text/javascript">
-
-
-      </script>
   </body>
 </html>
 
