--- a/www/splash.html
+++ b/www/splash.html
@@ -5,35 +5,65 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>FYB</title>
 
-    <link rel="manifest" href="manifest.json">
-
-    <!-- un-comment this code to enable service worker
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('service-worker.js')
-          .then(() => console.log('service worker installed'))
-          .catch(err => console.log('Error', err));
-      }
-    </script>-->
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <!-- Animate Css -->
+    <link href="css/animate.css" rel="stylesheet">
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+
+    <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/controller/splashController.js"></script>
   </head>
   <body ng-app="besties">
-  <div ng-controller="splashController">
-    <ion-content style="background-color: #e5baba " scroll="false">
+      <ion-pane>
+  <ion-content>
+    <div class="conteneur" align="center">
+    <div class="css3_div">
+      <img width="90%" ng-src="img/ionic.png"/>
+        <div class="txtcss">
+          <font style="font-size: 30px;">JP Creation</font>
+          <br />
+          <font style="font-weight:300; font-size: 18px;">Welcomes You</font>
+        </div>
+    </div>
+    <div class="html5_div">
+      <img width="50%" ng-src="img/ionic.png"/>
+      <div class="txthtml">
+          <font style="font-weight:300;font-size: 30px;">JP Creation</font>
+            <br />
+          <font style="font-weight:300; font-size: 18px;">Education for free</font>
+      </div>
+    </div>
+    <div class="trycss">
+        <font style="font-weight:300;font-size: 30px;">Enjoy The App</font>
+          <br />
+        <font style="font-weight:300; font-size: 18px;">It's Fully Free</font>
+    </div>
+    <div class="shareit">
+        <font style="font-size: 30px;"> AND SHARE</font> <font style="font-size: 45px;">IT</font>
+          <br />
+        <font style="font-size: 18px;">;)</font>
+    </div>
+  </div>
+  </ion-content>
+</ion-pane>
+  </body>
+</html>
+
+    <!-- <ion-content style="background-color: #e5baba " scroll="false">
         <div class="card">
           <div class="item item-divider text-center">
             <h1 class="title ">Find Your Besties</h1>
@@ -46,4 +76,4 @@
       <div style="position: absolute;bottom: 0;"><img src="img/starterimage.png"></div>
       </div>
   </body>
-</html>
+</html> -->
