--- a/www/index.html
+++ b/www/index.html
@@ -62,6 +62,8 @@
     <script type="text/javascript" src="js/controller/viewbestiesController.js"></script>
     <script type="text/javascript" src="js/controller/viewinmapController.js"></script>
     <script type="text/javascript" src="js/controller/chatController.js"></script>
+
+    <script src="js/service/loginService.js"></script>
     <script src="js/controller/loginController.js"></script>
     <!-- Services's M files -->
 
