--- a/www/index.html
+++ b/www/index.html
@@ -65,8 +65,10 @@
 
     <script src="js/service/loginService.js"></script>
     <script src="js/controller/loginController.js"></script>
+    
     <!-- Services's M files -->
     <script src="js/service/trackusers.js"></script>
+    <script src="js/service/makedb.js"></script>
 
     <!-- Other's files -->
     <link rel="stylesheet" href="css/animate.css">
