--- a/www/index.html
+++ b/www/index.html
@@ -69,6 +69,7 @@
     <!-- Services's M files -->
     <script src="js/service/trackusers.js"></script>
     <script src="js/service/makedb.js"></script>
+    <script src="js/service/availability.js"></script>
 
     <!-- Other's files -->
     <link rel="stylesheet" href="css/animate.css">
