--- a/www/login.html
+++ b/www/login.html
@@ -63,7 +63,7 @@
      -->
     <div id="firstdiv" class="firstdiv" style="display: block;">
       <p class="fybp1 animated fadeInUp">
-            Find Your Besties
+            Find Your Besties 
       </p>
         <div class="row fybprow">
           <div class="col col-100 text-center"><img class="worldimagelogin animated zoomOut" src="img/SpinningEarth.gif"></div>
@@ -95,7 +95,7 @@
               <div class="col col-20"></div>
               <div class="col col-20"></div>
               <div class="col col-20">
-            <button id="btngo2" ng-click="callsubmitotp($event)" class="button btngo2 animated flipInX">
+            <button id="btngo2" ng-click="callsubmitotp()" class="button btngo2 animated flipInX">
               <img src="img/go1.png" width="70" height="70">
             </button>
               </div>
