--- a/www/login.html
+++ b/www/login.html
@@ -110,7 +110,7 @@
     <!-- 
           otpdiv (6digit)
      -->
-    <div id="otpdiv" class="otpdiv" style="display: none;">
+    <!-- <div id="otpdiv" class="otpdiv" style="display: none;">
     <form name="loginOtp">
       <p class="fybpotp animated zoomInUp">
             Requesting OTP
@@ -131,7 +131,6 @@
               <div class="col col-100 text-center">
               <center>
           <button id="btngo3" ng-click="callsubmit()" class="button btngo3 animated flipInX">
-            <!-- <img src="img/go5.png" width="100" height="100"> -->
             <img src="img/go1.png" width="70" height="70">
           </button>
             </center>
@@ -139,7 +138,7 @@
         </div>
       </div>
     </form>
-    </div>
+    </div> -->
     
 
     <!-- 
