--- a/www/login.html
+++ b/www/login.html
@@ -110,7 +110,7 @@
     <!-- 
           otpdiv (6digit)
      -->
-    <!-- <div id="otpdiv" class="otpdiv" style="display: none;">
+    <div id="otpdiv" class="otpdiv" style="display: none;">
     <form name="loginOtp">
       <p class="fybpotp animated zoomInUp">
             Requesting OTP
@@ -138,7 +138,7 @@
         </div>
       </div>
     </form>
-    </div> -->
+    </div>
     
 
     <!-- 
