--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     <!-- <link href="lib/ionic/css/ionicnightly.css" rel="stylesheet"> -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link href="css/login.css" rel="stylesheet">
+    <!-- <link href="css/login.css" rel="stylesheet"> -->
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -74,7 +74,6 @@
     <script src="js/service/availability.js"></script>
 
     <!-- Other's files -->
-    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/ng-animation.css">
     <script type="text/javascript" src="lib/other/d3/d3.min.js"></script>
     <!-- <script type="text/javascript" src="lib/other/googlemap.js"></script> -->
