--- a/www/login.html
+++ b/www/login.html
@@ -6,7 +6,7 @@
     <title>FYB</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <!-- <link href="css/style.css" rel="stylesheet"> -->
     <link href="css/stylelogin.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -26,7 +26,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
-    <script src="js/controller/splashController.js"></script>
+    <!-- <script src="js/controller/splashController.js"></script> -->
         <script src="js/service/loginService.js"></script>
 
     <!-- your controller's js -->
