--- a/www/login.html
+++ b/www/login.html
@@ -31,13 +31,13 @@
     <script src="js/controller/loginController.js"></script>
     <!-- <script src="js/controller/splashController.js"></script> -->
         <script src="js/service/loginService.js"></script>
-        
+
     <script type="text/javascript" src="js/controller/menuController.js"></script>
     <script src="js/controller/homeController.js"></script>
      
   </head>
   <body ng-app="besties">
-        <ion-content class="myLogContent text-center" scroll="false">
+        <div class="myLogContent text-center" scroll="false">
         <div id="DivM1" class="DivM1" ng-hide="open1">
           <h1>A B C d</h1>
           <form>
@@ -77,6 +77,6 @@
               <button class="button DivM5buttonEle" ng-click="call5()"></button>
           </div>
         </div>
-      </ion-content>
+      </div>
   </body>
 </html>
