--- a/www/login.html
+++ b/www/login.html
@@ -52,7 +52,7 @@
             </div>
           </form>
         </div>
-        <div id="DivM2" class="DivM2" ng-show="open2">
+        <!-- <div id="DivM2" class="DivM2" ng-show="open2">
           2nd Div
           
           <div class="DivM2button">
@@ -76,7 +76,7 @@
           <div class="DivM5button">
               <button class="button DivM5buttonEle" ng-click="call5()"></button>
           </div>
-        </div>
+        </div> -->
       </div>
   </body>
 </html>
