--- a/www/login.html
+++ b/www/login.html
@@ -52,14 +52,14 @@
             </div>
           </form>
         </div>
-        <!-- <div id="DivM2" class="DivM2" ng-show="open2">
+        <div id="DivM2" class="DivM2" ng-hide="open2">
           2nd Div
           
           <div class="DivM2button">
               <button class="button DivM2buttonElement" ng-click="call2()"></button>
           </div>
         </div>
-        <div id="DivM3" class="DivM3" ng-show="open3">
+        <!-- <div id="DivM3" class="DivM3" ng-show="open3">
           3nd Div
           <div class="DivM3button">
               <button class="button DivM3buttonEle" ng-click="call3()"></button>
