--- a/www/login.html
+++ b/www/login.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>FYB</title>
+  
+  <link rel="icon" href="img/ionic.png">
+    <link href="css/stylelogin.css" rel="stylesheet">
+</head>
+
+<body>
+ 
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,7 +18,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- <link href="css/style.css" rel="stylesheet"> -->
-    <link href="css/stylelogin.css" rel="stylesheet">
+    
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -36,10 +47,10 @@
     <script src="js/controller/homeController.js"></script>
      
   </head>
-  <body ng-app="besties">
+  <body ng-app="besties" ng-controller="loginController">
         <div class="myLogContent text-center" scroll="false">
         <div id="DivM1" class="DivM1" ng-hide="open1">
-          <h1>A B C d</h1>
+          <h1>Find Your Besties</h1>
           <form>
             <div class="list DivM1list">
               <label class="item item-input item-floating-label la1">
@@ -79,4 +90,7 @@
         </div> -->
       </div>
   </body>
+</html>
+
+</body>
 </html>
