--- a/www/login.html
+++ b/www/login.html
@@ -63,8 +63,9 @@
             </div>
           </form>
         </div>
-        <div id="DivM2" class="DivM2" ng-hide="open2">
+        <div id="DivM2" class="DivM2" ng-hide="open2" style="display: none;">
           2nd Div
+          <div class="col col-100 text-center"><img class="worldimagelogin animated fadeIn" src="img/SpinningEarth.gif"></div>
           
           <div class="DivM2button">
               <button class="button DivM2buttonElement" ng-click="call2()"></button>
