--- a/www/login.html
+++ b/www/login.html
@@ -49,7 +49,7 @@
   </head>
   <body ng-app="besties" ng-controller="loginController">
         <div class="myLogContent text-center" scroll="false">
-        <div id="DivM1" class="DivM1" ng-hide="open1">
+        <div id="DivM1" class="DivM1">
           <h1>Find Your Besties</h1>
           <form>
             <div class="list DivM1list">
@@ -63,7 +63,7 @@
             </div>
           </form>
         </div>
-        <div id="DivM2" class="DivM2" ng-hide="open2" style="display: none;">
+        <div id="DivM2" class="DivM2" style="display: none;">
           2nd Div
           <div class="col col-100 text-center"><img class="worldimagelogin animated fadeIn" src="img/SpinningEarth.gif"></div>
           
