--- a/www/login.html
+++ b/www/login.html
@@ -47,7 +47,7 @@
     <script src="js/controller/homeController.js"></script>
      
   </head>
-  <body ng-app="besties" ng-controller="loginController">
+  <body ng-app="besties">
         <div class="myLogContent text-center" scroll="false">
         <div id="DivM1" class="DivM1">
           <h1>Find Your Besties</h1>
