--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="img/ionic.png">
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBStEJdHAiAZAOeZB8sG2cx5MdKqm284t8&callback=initMap"
  type="text/javascript"></script>
-    <link href="css/stylelogin.css" rel="stylesheet">
+    <!-- <link href="css/stylelogin.css" rel="stylesheet"> -->
 </head>
 
 <body>
